@@ -48,6 +48,9 @@ Changelog
 - Fixed a bug in fitsdiff that reported two header keywords containing NaN
   as value as different. (#204)
 
+- Fixed a bug where instantiating a ``BinTableHDU`` from a numpy array
+  containing boolean fields converted all the values to ``False``. [#215]
+
 - Fixed a couple cases where creating a new table using TDIMn in some of the
   columns could caused a crash. (spacetelescope/PyFITS#3)
 
@@ -64,6 +67,9 @@ Changelog
 - Fixed a bug on Python 3 where attempting to open a non-existent file on
   Python 3 caused a seemingly unrelated traceback. Backported from 3.1.2.
   (#203)
+
+- Fixed a bug where instantiating a ``BinTableHDU`` from a numpy array
+  containing boolean fields converted all the values to ``False``. [#215]
 
 
 3.1.1 (2013-01-02)
